--- a/TBRJL/Home/View/ZCCell.xib
+++ b/TBRJL/Home/View/ZCCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9046" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ZCCell"/>
@@ -13,7 +13,6 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="保单号：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1GT-0b-RmA">
                     <rect key="frame" x="15" y="53" width="73" height="21"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="73" id="v6J-fF-sxa"/>
                         <constraint firstAttribute="height" constant="21" id="yu1-Xq-p69"/>
@@ -24,7 +23,6 @@
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="投保人：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1a0-y1-gBe">
                     <rect key="frame" x="15" y="27" width="69" height="21"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="CGO-Ef-8Tb"/>
                         <constraint firstAttribute="width" constant="69" id="a5l-fQ-hiI"/>
@@ -35,7 +33,6 @@
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vP0-BB-Lir">
                     <rect key="frame" x="85" y="4" width="187" height="24"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="8pP-wQ-1BX"/>
                     </constraints>
@@ -43,11 +40,10 @@
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RIh-e0-ws0">
-                    <rect key="frame" x="85" y="52" width="187" height="24"/>
-                    <animations/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RIh-e0-ws0">
+                    <rect key="frame" x="85" y="52" width="235" height="24"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="24" id="Pc9-6x-7dS"/>
+                        <constraint firstAttribute="height" constant="24" id="oSH-DH-sYD"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -55,7 +51,6 @@
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZH-hq-MaQ">
                     <rect key="frame" x="85" y="27" width="187" height="24"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="Fyy-yc-qaH"/>
                     </constraints>
@@ -65,7 +60,6 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="atc-0q-hUM">
                     <rect key="frame" x="37" y="85" width="25" height="25"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="25" id="MJ9-qS-jZW"/>
                         <constraint firstAttribute="height" constant="25" id="dL9-40-ybP"/>
@@ -80,7 +74,6 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Jg-2A-bul">
                     <rect key="frame" x="148" y="85" width="25" height="25"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="25" id="0ks-p9-JVI"/>
                         <constraint firstAttribute="height" constant="25" id="2vC-3H-qg6"/>
@@ -93,7 +86,6 @@
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFZ-bX-mZ5">
                     <rect key="frame" x="247" y="85" width="25" height="25"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="25" id="JTm-pY-t2V"/>
                         <constraint firstAttribute="height" constant="25" id="iGE-cn-7wZ"/>
@@ -106,7 +98,6 @@
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="险种：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EgT-SK-FrP">
                     <rect key="frame" x="15" y="5" width="71" height="21"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="71" id="Lsb-IY-2ru"/>
                         <constraint firstAttribute="height" constant="21" id="UUa-Pl-YWh"/>
@@ -116,7 +107,6 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="9Jg-2A-bul" secondAttribute="bottom" constant="10" id="2Go-SM-ubV"/>
@@ -125,21 +115,21 @@
                 <constraint firstAttribute="trailing" secondItem="vP0-BB-Lir" secondAttribute="trailing" constant="48" id="7ab-3U-foL"/>
                 <constraint firstAttribute="trailing" secondItem="MZH-hq-MaQ" secondAttribute="trailing" constant="48" id="8cl-kP-NnI"/>
                 <constraint firstItem="vP0-BB-Lir" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="85" id="9Lb-Rb-P1l"/>
+                <constraint firstAttribute="trailing" secondItem="RIh-e0-ws0" secondAttribute="trailing" id="9hA-WQ-fbq"/>
                 <constraint firstAttribute="bottom" secondItem="atc-0q-hUM" secondAttribute="bottom" constant="10" id="GW1-dC-Zuu"/>
                 <constraint firstItem="atc-0q-hUM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="37" id="HjB-Wy-2BT"/>
+                <constraint firstItem="RIh-e0-ws0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="85" id="KPw-5n-Ahe"/>
                 <constraint firstItem="MZH-hq-MaQ" firstAttribute="leading" secondItem="1a0-y1-gBe" secondAttribute="trailing" constant="1" id="M3J-QX-jkR"/>
                 <constraint firstItem="1a0-y1-gBe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="NzA-OG-IeH"/>
-                <constraint firstItem="RIh-e0-ws0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="85" id="Oq9-rq-dt4"/>
                 <constraint firstItem="1GT-0b-RmA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="TWb-Cr-tzc"/>
-                <constraint firstItem="RIh-e0-ws0" firstAttribute="top" secondItem="MZH-hq-MaQ" secondAttribute="bottom" constant="1" id="foD-Zp-8Sf"/>
                 <constraint firstItem="EgT-SK-FrP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="hM4-tW-ipl"/>
                 <constraint firstAttribute="bottom" secondItem="bFZ-bX-mZ5" secondAttribute="bottom" constant="10" id="lIy-7p-lSm"/>
+                <constraint firstItem="RIh-e0-ws0" firstAttribute="top" secondItem="MZH-hq-MaQ" secondAttribute="bottom" constant="1" id="lpL-R2-ZBc"/>
                 <constraint firstItem="vP0-BB-Lir" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="4" id="sci-lX-8qc"/>
                 <constraint firstItem="EgT-SK-FrP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="utq-LL-g14"/>
                 <constraint firstItem="1GT-0b-RmA" firstAttribute="top" secondItem="1a0-y1-gBe" secondAttribute="bottom" constant="5" id="vPl-aX-pC5"/>
                 <constraint firstItem="MZH-hq-MaQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="27" id="wvY-sg-ZZ9"/>
                 <constraint firstAttribute="trailing" secondItem="bFZ-bX-mZ5" secondAttribute="trailing" constant="48" id="xmn-Jq-JL7"/>
-                <constraint firstAttribute="trailing" secondItem="RIh-e0-ws0" secondAttribute="trailing" constant="48" id="zpd-aO-L9N"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
